update 插件3.6