@@ -46,22 +46,4 @@ dependencies {
 tasks.withType(JavaCompile) {
     it.options.compilerArgs << "-Xplugin:ZrExMethod"
     it.options.compilerArgs << "-Xplugin:ZrString"
-//    it.options.fork = true
-//    if (Integer.parseInt(System.getProperty("java.version").split("\\.")[0]) >= 11) {
-//        it.options.forkOptions.jvmArgs
-//                << "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
-//                << "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED"
-//                << "--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED"
-//                << "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED"
-//                << "--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED"
-//                << "--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED"
-//                << "--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED"
-//                << "--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED"
-//                << "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED"
-//                << "--add-opens=jdk.compiler/com.sun.tools.javac.code.Types=ALL-UNNAMED"
-//                << "--add-opens=jdk.compiler/com.sun.tools.javac.code.Names=ALL-UNNAMED"
-//                << "--add-opens=jdk.compiler/com.sun.tools.javac.code.Symtab=ALL-UNNAMED"
-//                << "--add-opens=jdk.compiler/com.sun.tools.javac.processing.JavacProcessingEnvironment=ALL-UNNAMED"
-//        it.options.fork = true
-//    }
 }
